--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,19 @@
 .mainDiv {
     display: flex;
     flex-direction: row;
+    gap:10px;
 }
 
 .divViewUser {
-    background-color: red;
     width: 50%;
+    border: 2px solid lightslategray;
 }
 
 .divAddForm {
-    background-color: green;
     width: 50%;
     display: flex;
     flex-direction: column;
+    border: 2px solid lightslategray;
 }
 
 .divAddForm > div {
